# Spencer

./: CMakeLists.txt  README.md  Spencer.cpp  main.cpp
Libraries/: CMakeLists.txt
Systems/: CMakeLists.txt
Systems/Base/Headers/: Base.h  Brain_Base.h  Motion_Base.h  System_Base.h
Systems/Base/Sources/: Base.cpp  Brain_Base.cpp  Motion_Base.cpp  System_Base.cpp
Systems/Body/Headers/: Body_Part.h  Joint.h  Motor.h  Robot_Body.h
Systems/Body/Sources/: Body_Part.cpp  Joint.cpp  Motor.cpp  Robot_Body.cpp
Systems/Brain/Headers/: Activity.h  Base.h  Brain_Base.h  Sensor.h
Systems/Brain/Source/: Base.cpp
Systems/Brain/Sources/: Activity.cpp  Brain_Base.cpp  Sensor.cpp
Systems/Motion/Headers/: Body_Part.h  Joint.h  Motion.h  Motion_Base.h  Motor.h
Systems/Motion/Sources/: Body_Part.cpp  Joint.cpp  Motion.cpp  Motion_Base.cpp  Motor.cpp
Systems/Utililties/Headers/: Enumerations.h  Logging.h
Systems/Utililties/Sources/: Logging.cpp
Systems/Vision/Headers/: Vision.h
Systems/Vision/Sources/: Vision.cpp
Tests/: BaseTests.cpp
